--- a/html/projects.html
+++ b/html/projects.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Kaila Baker's Portfolio</title>
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,14 +14,11 @@
 
 <style>
 
+
 img {
     border-radius: 4px;
     padding: 5px;
     width: 150px;
-}
-
-.header-img {
-  background-image: url('/pix/digital_photography/lighthouse2.png');
 }
 
 
@@ -51,29 +48,26 @@ img {
 </nav>
 
 <!-- Header with full-height image -->
-<header class="header-img">
 
 
-<!-- porject Section -->
-<div class="w3-container" style="padding:128px 16px" id="projects">
+<header>
   <center>
-  <a href="../index.html"> <img src="/pix/logos/logoblack.png"></img> </a> </center>
+
+  <br><a href="../index.html"> <img src="/pix/logos/logoblack.png" style="width:35%;height35%;"></img> </a> </center>
 
 <div class="w3-row w3-centered">
   <center><h1 class="w3-myfont w3-jumbo"> Projects </h1>
-  </div>
   <div class="w3-row w3-xlarge:">
     <nav><center>
   <a href="#photography">photography</a> |
   <a href="#graphicdesign">graphic design</a>
   </nav>
 </div>
-
-  </center>
-
-  </div>
-  </div>
+</div>  </center>
 </header>
+
+<div class="w3-container" style="padding:128px 16px" id="projects">
+<!-- Project Section -->
 <div class="w3-container" style="background-color:#4bbac1" id="photography">
 <center> <a name="photography"> <h1 class="w3-myfont w3-xxlarge">Photography</h1> </center></a>
 </div>
@@ -197,42 +191,42 @@ img {
 
 <!-- design Section -->
 
-<div class="w3-container" style="background-color:#4bbac1" id="photography">
+<div class="w3-row" style="background-color:#4bbac1" id="photography">
 <a name="graphicdesign"> <center>  <h1 class="w3-myfont w3-xxlarge">Graphic Design</h1> </center>
 </div><br></a>
 
 <div class="row">
   <div class="column">
-      <img src="/pix/designs/araayaa1x1.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+      <img src="/pix/designs/araayaa1x1.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="/pix/designs/kaliflyer1x1.jpg"style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+    <img src="/pix/designs/kaliflyer1x1.jpg"style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
     </div>
   <div class="column">
-    <img src="/pix/designs/magz_ad1x1.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    <img src="/pix/designs/magz_ad1x1.jpg" style="width:100%" onclick="openModal();currentSlide(15)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="/pix/designs/sasha1x1.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+    <img src="/pix/designs/sasha1x1.jpg" style="width:100%" onclick="openModal();currentSlide(16)" class="hover-shadow cursor">
   </div>
 
   <div class="column">
-    <img src="/pix/designs/tiger1x1.png" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    <img src="/pix/designs/tiger1x1.png" style="width:100%" onclick="openModal();currentSlide(17)" class="hover-shadow cursor">
     </div>
   <div class="column">
-    <img src="/pix/designs/tkdbus_card1x1.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+    <img src="/pix/designs/tkdbus_card1x1.jpg" style="width:100%" onclick="openModal();currentSlide(18)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="/pix/designs/eelogo21x1.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+    <img src="/pix/designs/eelogo21x1.jpg" style="width:100%" onclick="openModal();currentSlide(19)" class="hover-shadow cursor">
   </div>
   <div class="column">
     <img src="/pix/designs/summerposter1x1.jpg"
-    style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+    style="width:100%" onclick="openModal();currentSlide(20)" class="hover-shadow cursor">
   </div>
 
 </div>
 </div>
 
-<div id="myModal2" class="modal2">
+<div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
 
@@ -289,7 +283,7 @@ img {
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64">
+<footer class="w3-center w3-padding-64" style="background-color:#4bbac1">
   <a href="/html/projects.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
