--- a/html/contact.html
+++ b/html/contact.html
@@ -160,9 +160,10 @@ body, html {
   </div>
 </div>
 
+
 <!-- Footer -->
 <footer class="w3-center w3-padding-64" style="background-color:white">
-  <a href="/html/contact.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="/html/contact.html" class="w3-button w3-round-large w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.facebook.com/kaila.m.bug" class="w3-bar-item w3-button-transparent w3-hover-shadow" style="color:#4bbac1" target="_blank">
         <i class="fa fa-facebook-official w3-hover-opacity"> </i></a>
@@ -172,6 +173,8 @@ body, html {
         <i class="fa fa-twitter w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/kaila-baker12/" class="w3-bar-item w3-button-transparent w3-hover-shadow" style="color:#4bbac1" target="_blank">
         <i class="fa fa-linkedin w3-hover-opacity"></i></a>
+
+
 
   </div>
 
