--- a/html/projects.html
+++ b/html/projects.html
@@ -53,7 +53,7 @@ img {
 <header>
   <center>
 
-  <br><a href="../index.html"> <img src="/pix/logos/logoblack.png" style="width:35%;height35%;"></img> </a> </center>
+  <br><a href="../index.html"> <img src="/pix/logos/logoblack.png" style="width:25%;height25%;"></img> </a> </center>
 
 <div class="w3-row w3-centered">
   <center><h1 class="w3-myfont w3-jumbo"> Projects </h1>
@@ -283,8 +283,8 @@ img {
 
 
 <!-- Footer -->
-<footer class="w3-center w3-padding-64" style="background-color:#4bbac1">
-  <a href="/html/projects.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+<footer class="w3-center  w3-padding-64" style="background-color:#4bbac1">
+  <a href="/html/projects.html" class="w3-button w3-round-large w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
