--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body, html {
 .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("/pix/digital_photography/lighthouse2.png");
+    background-image: url("/pix/digital_photography/light_house.jpg");
     min-height: 100%;
 
 }
